crates/weaver-e2e/tests/snapshots/rewrite_snapshots__rewrite_chained_transformations.snap
---
source: crates/weaver-e2e/tests/rewrite_snapshots.rs
expression: "(first, second)"
---
(
    RewriteSnapshot {
        output: "fn test() { let x = (1); }",
        num_replacements: 1,
        has_changes: true,
    },
    RewriteSnapshot {
        output: "fn test() { const x = (1) }",
        num_replacements: 1,
        has_changes: true,
    },
)
