crates/weaver-e2e/tests/snapshots/rewrite_snapshots__rewrite_rust_println_to_log.snap
---
source: crates/weaver-e2e/tests/rewrite_snapshots.rs
expression: result
---
RewriteSnapshot {
    output: "fn logging() {\n    log::info!((\"Starting\"));\n    log::info!((\"Processing: {}\", 42));\n    log::info!((\"Done\"));\n}\n",
    num_replacements: 3,
    has_changes: true,
}
